--- a/enchanted/index.html
+++ b/enchanted/index.html
@@ -12,6 +12,8 @@
     <link rel="icon" href="../res/icon.png" />
     <title>LandingStrip</title>
     <script src="modernizr.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='main.css' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
@@ -70,80 +72,5 @@
         <li><a href="#">Privacy Policy</a></li>
       </ul>
     </footer>
-    <style>
-      .number, i { color: #ff5533; }
-      body, a { color: #333333; }
-      body { 
-        font-family: "open sans", sans-serif;
-        max-width: 646px;
-      }
-
-      /*  responsiveness */
-      @media(min-width: 646px) {
-        /* show screenshots on larger screens */
-        .show { display: block; text-align: center; }
-        .show > ul { font-size: 0; line-height: 0; }
-        img { 
-          width: 280px;
-          margin: 0 10px;
-        }
-      }
-      @media(max-width: 645px) {
-        /* hide everything but the first screenshot on smaller screens */
-        .show > ul > li:not(:first-child) { display: none; }
-      }
-
-      body {
-        margin: 0px auto;
-        padding: 0px 40px;
-      }
-
-      h1, h2 {
-        margin: 50pt 0 20pt 0;
-        text-align: center;
-      }
-      .cta {
-        text-align: center;
-      }
-      .number {
-        display: block;
-        font-size: 48pt;
-        font-weight: bold;
-      }
-      p {
-        font-size: 17pt;
-        margin-bottom: 0;
-      }
-      .logo {
-        margin-bottom: 40px;
-        font-size: 52pt;
-        font-family: 'Pacifico', cursive;
-      }
-
-      .show ul { padding: 0; margin: 0; }
-      .show ul > li { display: inline-block; margin: 10px 0; }
-      .show ul > li > img { max-width: 100%; height: auto; }
-
-      .show ul > li > img { max-width: 100%; height: auto; }
-
-      .faq dl { font-size: 17pt; }
-      .faq dt { margin: 40px 0 0 40px; }
-      .faq dt::before { content: "Q: "; font-weight: bold; }
-      .faq dd { margin: 20px 0 0 40px; }
-
-      .disclaimer {
-        margin: 0;
-        font-size: 10px;
-      }
-
-      footer {
-        text-align: center;
-        max-width: 646px;
-        margin: 50pt auto;
-      }
-      footer p { font-size: 15pt; }
-      footer .nav li { display: inline-block; }
-      footer .nav li:not(:first-child)::before { content: "| " }
-    </style>
   </body>
 </html>
