added :phone:number to header

--- a/enchanted/index.html
+++ b/enchanted/index.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="A simple landing page that features a phonenumber as CTA" />
     <link rel="icon" href="../res/icon.png" />
     <title>LandingStrip</title>
+
     <script src="modernizr.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link href='main.css' rel='stylesheet' type='text/css'>
@@ -20,8 +21,7 @@
     <h1 class="logo">LandingStrip</h1>
 
     <div class="cta">
-      <h2 id="text">Text this phone number to get a ride to one of our recommended places:</h2>
-      <a href="sms://+1-404-555-0107;body=HEY" class="number">+1-404-555-0107</a>
+      <h2 id="text">Text this phone number to get a ride to one of our recommended places:<a href="sms://+1-404-555-0107;body=HEY" class="number">+1-404-555-0107</a></h2>
       <p>Text <i>STRIP</i> see something amazing</p>
       <p class="disclaimer">Message and/or data-rates may appl</p>
       <p class="disclaimer">All pun intended
@@ -56,8 +56,7 @@
     </div>
 
     <div class="cta">
-      <h2>Call this fake number if you want:</h2>
-      <a href="sms://+1-404-555-0107;body=HEY" class="number">+1-404-555-0107</a>
+      <h2>Call this fake number if you want:<a href="sms://+1-404-555-0107;body=HEY" class="number">+1-404-555-0107</a></h2>
       <p>Text <i>STRIP</i> now to get started!</p>
       <p class="disclaimer">Message and/or data-rates may apply</p>
     </div>
