added a logo image

--- a/enchanted/index.html
+++ b/enchanted/index.html
@@ -18,7 +18,10 @@
   </head>
 
   <body>
-    <h1 class="logo">LandingStrip</h1>
+    <h1 class="logo">
+      <img src="../res/ios/icon.png" alt="logo">
+      <span>LandingStrip</span>
+    </h1>
 
     <div class="cta">
       <h2 id="text">Text this phone number to get a ride to one of our recommended places:<a href="sms://+1-404-555-0107;body=HEY" class="number">+1-404-555-0107</a></h2>
