set scale for mobile

--- a/enchanted/index.html
+++ b/enchanted/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="LandingStrip">
     <meta property="og:title" content="LandingStrip" />
     <meta property="og:description" content="A simple landing page that features a phonenumber as CTA" />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' /
     <link rel="icon" href="../res/icon.png" />
     <title>LandingStrip</title>
 
