added some pretty faces :sun_with_face:

--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -101,38 +101,82 @@
         <h2>Team</h2>
         <ul>
           <li>
-            <img src="https://pbs.twimg.com/profile_images/476979673138987008/4lfC3XM5.jpeg" alt="me">
-            <span>David Asabina</span>
-            <span class="twitter">@vidbina</span>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/sauro/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@sauro</span>
           </li>
           <li>
-            <img src="https://pbs.twimg.com/profile_images/476979673138987008/4lfC3XM5.jpeg" alt="me">
-            <span>David Asabina</span>
-            <span class="twitter">@vidbina</span>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@adellecharles</span>
           </li>
           <li>
-            <img src="https://pbs.twimg.com/profile_images/476979673138987008/4lfC3XM5.jpeg" alt="me">
-            <span>David Asabina</span>
-            <span class="twitter">@vidbina</span>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@kfriedson</span>
           </li>
           <li>
-            <img src="https://pbs.twimg.com/profile_images/476979673138987008/4lfC3XM5.jpeg" alt="me">
-            <span>David Asabina</span>
-            <span class="twitter">@vidbina</span>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/danbenoni/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@danbenoni</span>
           </li>
           <li>
-            <img src="https://pbs.twimg.com/profile_images/476979673138987008/4lfC3XM5.jpeg" alt="me">
-            <span>David Asabina</span>
-            <span class="twitter">@vidbina</span>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/madysondesigns/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@madysondesigns</span>
           </li>
           <li>
-            <img src="https://pbs.twimg.com/profile_images/476979673138987008/4lfC3XM5.jpeg" alt="me">
-            <span>David Asabina</span>
-            <span class="twitter">@vidbina</span>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/nick_persad/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@nick_persad</span>
           </li>
           <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jinuem/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@jinuem</span>
+          </li>
+          <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/uxceo/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@uxceo</span>
+          </li>
+          <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/mist3r_c0r3/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@mist3r_c0r3</span>
+          </li>
+          <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/oykun/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@oykun</span>
+          </li>
+          <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/annapickard/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@annapickard</span>
+          </li>
+          <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/myusuf3/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@myusuf3</span>
+          </li>
+          <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/littlenono/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@littlenono</span>
+          </li>
+          <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/marktimemedia/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@marktimemedia</span>
+          </li>
+          <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/axel/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@axel</span>
+          </li>
+          <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/joelcannon/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@joelcannon</span>
+          </li>
+          <li>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/chexee/128.jpg" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter">@chexee</span>
+          </li>
+          <!--
+          <li>
+            <img src="" alt="a pretty person's avatar from uifaces.com">
+            <span class="twitter"></span>
+          </li>
+          -->
+          <li>
             <img src="https://pbs.twimg.com/profile_images/476979673138987008/4lfC3XM5.jpeg" alt="me">
-            <span>David Asabina</span>
+            <!--<span>David Asabina</span>-->
             <span class="twitter">@vidbina</span>
           </li>
         </ul>
