improved responsiveness :iphone:

--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -32,8 +32,8 @@
 
       <form>
         <div class="single">
-          <input class="text"></input>
-          <input class="inset" type="submit" value="Text me">
+          <input class="text" placeholder="Placeholder"></input>
+          <input class="inset" type="submit" value="CTA">
         </div>
       </form>
 
@@ -174,11 +174,11 @@
             <span class="twitter"></span>
           </li>
           -->
+          <!--
           <li>
             <img src="https://pbs.twimg.com/profile_images/476979673138987008/4lfC3XM5.jpeg" alt="me">
-            <!--<span>David Asabina</span>-->
             <span class="twitter">@vidbina</span>
-          </li>
+          </li>-->
         </ul>
       </section>
 
