--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -17,6 +17,7 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,900,700,500,100,300' rel='stylesheet' type='text/css'>
     <link href='../res/normalize.css' rel='stylesheet' type='text/css'>
     <link href='main.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -57,6 +58,7 @@
       </section>
 
       <section class="info">
+        <i class="fa fa-flash fa-3x"></i>
         <h2>A Title for This Section</h2>
         <p>The trick of a great landing page is to be succint but yet provide
         sufficient information to convert viewers. Overloading parties with 
@@ -66,6 +68,7 @@
       </section>
 
       <section class="info">
+        <i class="fa fa-diamond fa-3x"></i>
         <h2>Another One</h2>
         <p>The trick of a great landing page is to be succint but yet provide
         sufficient information to convert viewers. Overloading parties with 
@@ -75,6 +78,7 @@
       </section>
 
       <section class="faq">
+        <i class="fa fa-question-circle fa-3x"></i>
         <h2>Frequently Answered Questions</h2>
         <dl>
           <dt>How can I use this?
@@ -98,6 +102,7 @@
       </section>
 
       <section class="grid">
+        <i class="fa fa-heart fa-3x"></i>
         <h2>Team</h2>
         <ul>
           <li>
@@ -183,6 +188,7 @@
       </section>
 
       <section class="info">
+        <i class="fa fa-child fa-3x"></i>
         <h2>Join our Team</h2>
         <p>Well, being that this is just a dummy site, there is no team to
         be built. It's just a dummy site but if you need to grow a team you
