dark right pane

--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -49,7 +49,7 @@
     </aside>
 
     <main>
-      <section class="place berlin">
+      <section class="place berlin gradient">
         <h2>Berlin, Germany</h2>
         <div class="iphone">
           <img src="../res/ios/iPhone6.png" alt="LandingStrip on iPhone 6">
