keeping the gradient on the img simple :wink:

--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -98,8 +98,8 @@
           <dt>Why is the color orange/red?
           <dd>Because red apparently converts better, look it up.
           
-          <dt>Where is the photo from?
-          <dd>It's from <a href="https://flic.kr/p/nxbBD">Pazit Polak</a>'s Flickr profile. It's a creative commons picture.
+          <dt>What is the source of that mesmerising photograph?
+          <dd>It's from <a href="https://flic.kr/p/nxbBD">Pazit Polak</a>'s Flickr profile. It was used because it is published under the Creative Commons license.
         </dl>
       </section>
 
