added a download button

--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -29,7 +29,11 @@
 
       <h2>Start measuring faster. Get that landingpage online in no time.</h2>
 
-      <div class="download"></div>
+      <!--
+      <div class="download">
+        <a href="#" class="button">Download</a>
+      </div>
+      -->
 
       <form>
         <div class="single">
