adding github cta's
We need more hands submitting templates and fixing the issues on the
current templates. So let's get them to watch, star and fork the
project.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <link href='res/normalize.css' rel='stylesheet' type='text/css'>
     <link href='joinsupport/main.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <style>
+      .github-ctas {
+        text-align: center;
+        padding-top: 2em;
+      }
+      .github-follow {
+        padding-top: 1em;
+      }
+    </style>
   </head>
 
   <body>
@@ -33,6 +42,10 @@
         <a href="https://github.com/vidbina/landing-strip" class="button large">
           <i class="fa fa-github fa-1x"></i>
           Github Project</a>
+      </div>
+
+      <div class="github-ctas">
+        <iframe src="https://ghbtns.com/github-btn.html?user=vidbina&repo=landing-strip&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
       </div>
 
       <footer>
@@ -95,8 +108,10 @@
         <h2>Team</h2>
         <ul>
           <li>
-            <img src="https://pbs.twimg.com/profile_images/643506998567411716/SlJWXy-7_400x400.png" alt="vidbina's twitter avatar">
-            <span class="twitter"><a href="https://twitter.com/vidbina">@vidbina</a></span>
+            <!--<img src="https://pbs.twimg.com/profile_images/643506998567411716/SlJWXy-7_400x400.png" alt="vidbina's twitter avatar">-->
+            <!--<span class="twitter"><a href="https://twitter.com/vidbina">@vidbina</a></span>-->
+            <!--<iframe class="github-follow" src="https://ghbtns.com/github-btn.html?user=vidbina&type=follow&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>-->
+            <iframe src="https://ghbtns.com/github-btn.html?user=vidbina&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
           </li>
         </ul>
       </section>
@@ -105,8 +120,10 @@
         <a id="join"></a>
         <i class="fa fa-child fa-3x"></i>
         <h2>Join our Team</h2>
-        <p>Anyone with a good idea for a strip that needs to be in here is more than welcome to do so. Clone the 
+        <p>Anyone with a good idea for a strip that needs to be in here is more than welcome to do so. Fork the 
         <a href="https://github.com/vidbina/landing-strip"><strong>github project</strong></a> and add whatever you need or file an <a href="https://github.com/vidbina/landing-strip/issues"><strong>issue</strong></a> and watch us get to work.</p>
+        <iframe src="https://ghbtns.com/github-btn.html?user=vidbina&repo=landing-strip&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=vidbina&repo=landing-strip&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
       </section>
 
       <!--
