--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -65,11 +65,12 @@
       <section class="info">
         <i class="fa fa-flash fa-3x"></i>
         <h2>A Title for This Section</h2>
-        <p>The trick of a great landing page is to be succint but yet provide
-        sufficient information to convert viewers. Overloading parties with 
-        text serve no good. On the contrary, being too cryptic or unclear also
-        hurts the effort. Primary effort is to communicate to the viewer why
-        this solution is the best. Do it!</p>
+        <p>A great landing page is succint while providing sufficient
+        information to convert viewers. Overloading parties with text is
+        doesn't further the objective. On the contrary, being too cryptic,
+        ambiguous or unclear due to brevity sets one back as well. The
+        prerogative is to communicate to the viewer why this solution is the
+        best. Do it!</p>
       </section>
 
       <section class="info">
