Rename project and update links
Landing strip is ambiguous and offensive to some. I haven't quite
touched the whole thing since but while dusting off my drives it seems
like a good fix to push through right now.

--- a/enchanted/index.html
+++ b/enchanted/index.html
@@ -6,12 +6,12 @@
 <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="LandingStrip">
-    <meta property="og:title" content="LandingStrip" />
+    <meta name="author" content="LandingPage">
+    <meta property="og:title" content="LandingPage" />
     <meta property="og:description" content="A simple landing page that features a phonenumber as CTA" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' /
     <link rel="icon" href="../res/icon.png" />
-    <title>LandingStrip</title>
+    <title>LandingPage</title>
 
     <script src="modernizr.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
@@ -21,7 +21,7 @@
   <body>
     <h1 class="logo">
       <img src="../res/ios/icon.png" alt="logo">
-      <span>LandingStrip</span>
+      <span>LandingPage</span>
     </h1>
 
     <div class="cta">
@@ -34,7 +34,7 @@
 
     <div class="how">
       <h2 id="how">How It Works</h2>
-      <p>Download this page, fill in the text and watch the strip light up. It has been inspired by the <i>getmagicnow.com</i> page, but there is not a single line of code that was just copied from the source.</p>
+      <p>Download this page, fill in the text and watch the page light up. It has been inspired by the <i>getmagicnow.com</i> page, but there is not a single line of code that was just copied from the source.</p>
     </div>
 
     <div class="show">
@@ -60,13 +60,13 @@
     </div>
 
     <div class="cta">
-      <h2>Call this fake number if you want:<a href="sms://+1-404-555-0107;body=HEY" class="number">+1-404-555-0107</a></h2>
-      <p>Text <i>STRIP</i> now to get started!</p>
+      <h2>Call this fake number if you want:<a href="sms://+1-404-555-0107;body=LANDING PAGE" class="number">+1-404-555-0107</a></h2>
+      <p>Text <i>LANDING PAGE</i> now to get started!</p>
       <p class="disclaimer">Message and/or data-rates may apply</p>
     </div>
 
     <footer>
-      <p>LandingStrip is a template provided by <a href="http://github.com/vidbina">vidbina</a>, located wherever he is.</p>
+      <p>This landing page template allows for some links at this point.</p>
       <ul class="nav">
         <li><a href="#">Email the Founders</a></li>
         <li><a href="#">Support / Help</a></li>
