--- a/pipeline/index.html
+++ b/pipeline/index.html
@@ -6,12 +6,12 @@
 <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="LandingStrip">
-    <meta property="og:title" content="LandingStrip" />
+    <meta name="author" content="LandingPage">
+    <meta property="og:title" content="LandingPage" />
     <meta property="og:description" content="A simple landing page that features a few propositions and a call to action." />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' /
     <link rel="icon" href="../res/icon.png" />
-    <title>LandingStrip</title>
+    <title>LandingPage</title>
 
     <script src="modernizr.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
@@ -25,7 +25,7 @@
         <span class="extra">Test assumptions faster with</span>
         <span class="logo">
           <img src="../res/ios/icon.png" alt="logo">
-          <span>LandingStrip</span>
+          <span>LandingPage</span>
         </span>
       </h1>
     </header>
@@ -61,7 +61,7 @@
         <li><a href="#">Terms of Use</a></li>
         <li><a href="#">Privacy Policy</a></li>
       </ul>
-      <p>&copy; 20xx LandingStrip. Some rights reserved? It's up to you buddy.</p>
+      <p>&copy; 20xx LandingPage. Some rights reserved? It's up to you buddy.</p>
     </footer>
   </body>
 </html>
