--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -6,12 +6,12 @@
 <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="LandingStrip">
-    <meta property="og:title" content="LandingStrip" />
+    <meta name="author" content="LandingPage">
+    <meta property="og:title" content="LandingPage" />
     <meta property="og:description" content="A simple landing page that features a few propositions and a call to action." />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link rel="icon" href="../res/icon.png">
-    <title>LandingStrip</title>
+    <title>LandingPage</title>
 
     <script src="modernizr.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,900,700,500,100,300' rel='stylesheet' type='text/css'>
@@ -24,7 +24,7 @@
     <aside>
       <div class="logo">
         <img src="../res/ios/icon.png" alt="logo">
-        <h1>LandingStrip</h1>
+        <h1>LandingPage</h1>
       </div>
 
       <h2>Start measuring faster. Get that landingpage online in no time.</h2>
@@ -57,7 +57,7 @@
         <a id="top"></a>
         <h2>Berlin, Germany</h2>
         <div class="iphone">
-          <img src="../res/ios/iPhone6.png" alt="LandingStrip on iPhone 6">
+          <img src="../res/ios/iPhone6.png" alt="LandingPage on iPhone 6">
           <h2>A subtitle that makes a lot of sense.</h2>
         </div>
       </section>
