Format css, js and html files

--- a/pipeline/index.html
+++ b/pipeline/index.html
@@ -2,21 +2,30 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> 
-<html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+  <!--<![endif]-->
   <head>
-    <meta charset="utf-8">
-    <meta name="author" content="LandingPage">
+    <meta charset="utf-8" />
+    <meta name="author" content="LandingPage" />
     <meta property="og:title" content="LandingPage" />
-    <meta property="og:description" content="A simple landing page that features a few propositions and a call to action." />
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' /
+    <meta
+      property="og:description"
+      content="A simple landing page that features a few propositions and a call to action."
+    />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0,
+    user-scalable=0' name='viewport' /
     <link rel="icon" href="../res/icon.png" />
     <title>LandingPage</title>
 
     <script src="modernizr.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-    <link href='../res/normalize.css' rel='stylesheet' type='text/css'>
-    <link href='main.css' rel='stylesheet' type='text/css'>
+    <link
+      href="https://fonts.googleapis.com/css?family=Pacifico"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link href="../res/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -24,7 +33,7 @@
       <h1>
         <span class="extra">Test assumptions faster with</span>
         <span class="logo">
-          <img src="../res/ios/icon.png" alt="logo">
+          <img src="../res/ios/icon.png" alt="logo" />
           <span>LandingPage</span>
         </span>
       </h1>
@@ -43,11 +52,13 @@
           </li>
           <li>
             <h2>Listen and hustle!</h2>
-            <span>Sometimes it's hard. When it is, don't stay in the bubble.</span>
+            <span
+              >Sometimes it's hard. When it is, don't stay in the bubble.</span
+            >
           </li>
         </ol>
       </section>
-  
+
       <section class="cta">
         <h2><a href="#">Plans & Pricing</a></h2>
       </section>
@@ -61,7 +72,9 @@
         <li><a href="#">Terms of Use</a></li>
         <li><a href="#">Privacy Policy</a></li>
       </ul>
-      <p>&copy; 20xx LandingPage. Some rights reserved? It's up to you buddy.</p>
+      <p>
+        &copy; 20xx LandingPage. Some rights reserved? It's up to you buddy.
+      </p>
     </footer>
   </body>
 </html>
