--- a/enchanted/index.html
+++ b/enchanted/index.html
@@ -2,48 +2,70 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> 
-<html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+  <!--<![endif]-->
   <head>
-    <meta charset="utf-8">
-    <meta name="author" content="LandingPage">
+    <meta charset="utf-8" />
+    <meta name="author" content="LandingPage" />
     <meta property="og:title" content="LandingPage" />
-    <meta property="og:description" content="A simple landing page that features a phonenumber as CTA" />
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' /
+    <meta
+      property="og:description"
+      content="A simple landing page that features a phonenumber as CTA"
+    />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0,
+    user-scalable=0' name='viewport' /
     <link rel="icon" href="../res/icon.png" />
     <title>LandingPage</title>
 
     <script src="modernizr.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-    <link href='main.css' rel='stylesheet' type='text/css'>
+    <link
+      href="https://fonts.googleapis.com/css?family=Pacifico"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link href="main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <h1 class="logo">
-      <img src="../res/ios/icon.png" alt="logo">
+      <img src="../res/ios/icon.png" alt="logo" />
       <span>LandingPage</span>
     </h1>
 
     <div class="cta">
-      <h2 id="text">Text this phone number to get a ride to one of our recommended places:<a href="sms://+1-404-555-0107;body=HEY" class="number">+1-404-555-0107</a></h2>
+      <h2 id="text">
+        Text this phone number to get a ride to one of our recommended places:<a
+          href="sms://+1-404-555-0107;body=HEY"
+          class="number"
+          >+1-404-555-0107</a
+        >
+      </h2>
       <p>Text <i>STRIP</i> see something amazing</p>
       <p class="disclaimer">Message and/or data-rates may appl</p>
-      <p class="disclaimer">All pun intended
-      <p class="disclaimer">Fake phonenumber generated through <a href="http://fakenumber.org">fakenumber.org</a></p>
+      <p class="disclaimer">All pun intended</p>
+      <p class="disclaimer">
+        Fake phonenumber generated through
+        <a href="http://fakenumber.org">fakenumber.org</a>
+      </p>
     </div>
 
     <div class="how">
       <h2 id="how">How It Works</h2>
-      <p>Download this page, fill in the text and watch the page light up. It has been inspired by the <i>getmagicnow.com</i> page, but there is not a single line of code that was just copied from the source.</p>
+      <p>
+        Download this page, fill in the text and watch the page light up. It has
+        been inspired by the <i>getmagicnow.com</i> page, but there is not a
+        single line of code that was just copied from the source.
+      </p>
     </div>
 
     <div class="show">
       <h2 id="show">Examples</h2>
       <ul>
-        <li><img src="../res/ios/screen1.png" alt="Screenshot"></li>
-        <li><img src="../res/ios/screen2.png" alt="Screenshot"></li>
-        <li><img src="../res/ios/screen3.png" alt="Screenshot"></li>
-        <li><img src="../res/ios/screen1.png" alt="Screenshot"></li>
+        <li><img src="../res/ios/screen1.png" alt="Screenshot" /></li>
+        <li><img src="../res/ios/screen2.png" alt="Screenshot" /></li>
+        <li><img src="../res/ios/screen3.png" alt="Screenshot" /></li>
+        <li><img src="../res/ios/screen1.png" alt="Screenshot" /></li>
       </ul>
     </div>
 
@@ -51,16 +73,28 @@
       <h2 id="faq">FAQ</h2>
 
       <dl>
-        <dt>How can I use this?
-        <dd>Open with a text-editor and replace all the dummy strings with your copy.
+        <dt>How can I use this?</dt>
+        <dd>
+          Open with a text-editor and replace all the dummy strings with your
+          copy.
+        </dd>
 
-        <dt>Where is this design from?
-        <dd>The design is inspired by <a href="https://www.getmagicnow.com">Magic</a>.
+        <dt>Where is this design from?</dt>
+        <dd>
+          The design is inspired by
+          <a href="https://www.getmagicnow.com">Magic</a>.
+        </dd>
       </dl>
     </div>
 
     <div class="cta">
-      <h2>Call this fake number if you want:<a href="sms://+1-404-555-0107;body=LANDING PAGE" class="number">+1-404-555-0107</a></h2>
+      <h2>
+        Call this fake number if you want:<a
+          href="sms://+1-404-555-0107;body=LANDING PAGE"
+          class="number"
+          >+1-404-555-0107</a
+        >
+      </h2>
       <p>Text <i>LANDING PAGE</i> now to get started!</p>
       <p class="disclaimer">Message and/or data-rates may apply</p>
     </div>
