--- a/enchanted/index.html
+++ b/enchanted/index.html
@@ -30,7 +30,7 @@
   <body>
     <h1 class="logo">
       <img src="../res/ios/icon.png" alt="logo" />
-      <span>LandingPage</span>
+      <span>Landing Page</span>
     </h1>
 
     <div class="cta">
@@ -41,7 +41,7 @@
           >+1-404-555-0107</a
         >
       </h2>
-      <p>Text <i>STRIP</i> see something amazing</p>
+      <p>Text <i>LANDING</i> see something amazing</p>
       <p class="disclaimer">Message and/or data-rates may appl</p>
       <p class="disclaimer">All pun intended</p>
       <p class="disclaimer">
