--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -38,17 +38,19 @@
     <aside>
       <div class="logo">
         <img src="../res/ios/icon.png" alt="logo" />
-        <h1>LandingPage</h1>
+        <h1>Landing Page</h1>
       </div>
 
-      <h2>Start measuring faster. Get that landingpage online in no time.</h2>
+      <h2>Start measuring faster. Get that landing page online in no time.</h2>
 
-      <!--
+      <!-- Choose either the Download button or the CTA-->
+
+      <!-- Download -->
       <div class="download">
         <a href="#" class="button">Download</a>
       </div>
-      -->
 
+      <!-- Sign-up CTA -->
       <form>
         <div class="single">
           <input class="text" placeholder="Placeholder" />
@@ -71,7 +73,7 @@
         <a id="top"></a>
         <h2>Berlin, Germany</h2>
         <div class="iphone">
-          <img src="../res/ios/iPhone6.png" alt="LandingPage on iPhone 6" />
+          <img src="../res/ios/iPhone6.png" alt="Landing Page on iPhone 6" />
           <h2>A subtitle that makes a lot of sense.</h2>
         </div>
       </section>
@@ -80,11 +82,12 @@
         <i class="fa fa-flash fa-3x"></i>
         <h2>A Title for This Section</h2>
         <p>
-          A great landing page is succint while providing sufficient information
-          to convert viewers. Overloading parties with text is doesn't further
-          the objective. On the contrary, being too cryptic, ambiguous or
-          unclear due to brevity sets one back as well. The prerogative is to
-          communicate to the viewer why this solution is the best. Do it!
+          A great landing page is succinct while providing sufficient
+          information to convert viewers. Overloading parties with text is
+          doesn't further the objective. On the contrary, being too cryptic,
+          ambiguous or unclear due to brevity sets one back as well. The
+          prerogative is to communicate to the viewer why this solution is the
+          best. Do it!
         </p>
       </section>
 
@@ -92,7 +95,7 @@
         <i class="fa fa-diamond fa-3x"></i>
         <h2>Another One</h2>
         <p>
-          The trick of a great landing page is to be succint but yet provide
+          The trick of a great landing page is to be succinct but yet provide
           sufficient information to convert viewers. Overloading parties with
           text serve no good. On the contrary, being too cryptic or unclear also
           hurts the effort. Primary effort is to communicate to the viewer why
@@ -114,7 +117,10 @@
           <dt>Where is this design from?</dt>
           <dd>
             The design is inspired by
-            <a href="https://www.joinassist.com">Magic</a>.
+            <a
+              href="https://web.archive.org/web/20150914134557/http://joinassist.com/?hg=0"
+              >joinassist.com (September 14, 2015)</a
+            >.
           </dd>
 
           <dt>Why would I use this?</dt>
@@ -134,6 +140,12 @@
             It's from <a href="https://flic.kr/p/nxbBD">Pazit Polak</a>'s Flickr
             profile. It was used because it is published under the Creative
             Commons license.
+          </dd>
+
+          <dt>Who are the folks with the beautiful faces?</dt>
+          <dd>
+            The beautiful faces were sources from
+            <a href="https://uifaces.co/">UIFaces</a>.
           </dd>
         </dl>
       </section>
