--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
     <aside>
       <div class="logo">
         <img src="res/ios/icon.png" alt="logo" />
-        <h1>LandingPage</h1>
+        <h1>Landing Page</h1>
       </div>
 
-      <h2>Start measuring faster. Get that landingpage online in no time.</h2>
+      <h2>Start measuring faster. Get that landing page online in no time.</h2>
 
       <div class="download">
         <a href="https://github.com/vidbina/landing-pages" class="button large">
           <i class="fa fa-github fa-1x"></i>
-          Github Project</a
+          GitHub Project</a
         >
       </div>
 
