Add Download from Apple App Store banner

--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -47,7 +47,9 @@
 
       <!-- Download -->
       <div class="download">
-        <a href="#" class="button">Download</a>
+        <a href="#" class="button">
+        <img src="../res/ios/apple-badge-download-on-the-app-store.svg" alt="Download on the Apple App Store" />
+</a>
       </div>
 
       <!-- Sign-up CTA -->
