Use header + fix styles

--- a/joinsupport/index.html
+++ b/joinsupport/index.html
@@ -36,20 +36,26 @@
 
   <body>
     <aside>
-      <div class="logo">
-        <img src="../res/ios/icon.png" alt="logo" />
-        <h1>Landing Page</h1>
-      </div>
-
-      <h2>Start measuring faster. Get that landing page online in no time.</h2>
+      <header>
+        <div class="logo">
+          <img src="../res/ios/icon.png" alt="logo" />
+          <h1>Landing Page</h1>
+        </div>
+        <h2>
+          Start measuring faster. Get that landing page online in no time.
+        </h2>
+      </header>
 
       <!-- Choose either the Download button or the CTA-->
 
       <!-- Download -->
       <div class="download">
         <a href="#" class="button">
-        <img src="../res/ios/apple-badge-download-on-the-app-store.svg" alt="Download on the Apple App Store" />
-</a>
+          <img
+            src="../res/ios/apple-badge-download-on-the-app-store.svg"
+            alt="Download on the Apple App Store"
+          />
+        </a>
       </div>
 
       <!-- Sign-up CTA -->
@@ -73,10 +79,10 @@
     <main>
       <section class="place berlin gradient">
         <a id="top"></a>
-        <h2>Berlin, Germany</h2>
+        <span>Berlin, DE</span>
         <div class="iphone">
           <img src="../res/ios/iPhone6.png" alt="Landing Page on iPhone 6" />
-          <h2>A subtitle that makes a lot of sense.</h2>
+          <p>A subtitle that makes a lot of sense.</p>
         </div>
       </section>
 
