Fix enchanted theme for consistency

--- a/enchanted/index.html
+++ b/enchanted/index.html
@@ -41,7 +41,7 @@
           >+1-404-555-0107</a
         >
       </h2>
-      <p>Text <i>LANDING</i> see something amazing</p>
+      <p>Text <i>LANDING PAGE</i> to see something amazing</p>
       <p class="disclaimer">Message and/or data-rates may appl</p>
       <p class="disclaimer">All pun intended</p>
       <p class="disclaimer">
