Update HTML copy

--- a/pipeline/index.html
+++ b/pipeline/index.html
@@ -44,17 +44,15 @@
         <ol>
           <li>
             <h2>Choose your words</h2>
-            <span>At the end of the day, you're selling so sell!</span>
+            <span>Communicate the solution!</span>
           </li>
           <li>
             <h2>Measure user approval</h2>
-            <span>If you can't measure it. Don't bother.</span>
+            <span>If you can't measure it, don't bother.</span>
           </li>
           <li>
             <h2>Listen and hustle!</h2>
-            <span
-              >Sometimes it's hard. When it is, don't stay in the bubble.</span
-            >
+            <span>Adapt to user needs.</span>
           </li>
         </ol>
       </section>
@@ -73,7 +71,7 @@
         <li><a href="#">Privacy Policy</a></li>
       </ul>
       <p>
-        &copy; 20xx LandingPage. Some rights reserved? It's up to you buddy.
+        &copy; 20xx Landing Page. Some rights reserved? It's up to you buddy.
       </p>
     </footer>
   </body>
