--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -9,9 +9,11 @@
     <link rel="manifest" href="manifest.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
     <!-- Place favicon.ico in the root directory -->
-
+    <title>LandingCrop</title>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="./css/style.css">
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -26,7 +28,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <p class="hello">Hello world! This is HTML5 Boilerplate.</p>
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script>
       window.jQuery ||
