--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" href="icon.png" />
     <!-- Place favicon.ico in the root directory -->
     <title>LandingCrop</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -28,7 +29,11 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <p class="hello">Hello world! This is HTML5 Boilerplate.</p>
+
+
+
+
+    <script src="./js/vendor/bootstrap.min.js"></script>
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script>
       window.jQuery ||
