--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -10,11 +10,14 @@
     <link rel="apple-touch-icon" href="icon.png" />
     <!-- Place favicon.ico in the root directory -->
     <title>LandingCrop</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -30,8 +33,61 @@
 
     <!-- Add your site or application content here -->
 
+    <!-- Header Start -->
+    <header class="header">
+      <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="#">LandingCrop</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Solutions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Company</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Partners</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Learn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Success & Support</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link price_btn" href="#">get pricing</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <!-- Header End -->
 
+    <!-- Slider Section Start -->
+    <section class="slider_section">
+      <img
+        src="https://dummyimage.com/1300x600/f0ebf0/fff.jpg&text=Dummy+Image"
+        alt="LandingCrop"
+      />
+    </section>
+    <!-- End of Slider Section -->
 
     <script src="./js/vendor/bootstrap.min.js"></script>
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
