--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -82,10 +86,45 @@
 
     <!-- Slider Section Start -->
     <section class="slider_section">
-      <img
-        src="https://dummyimage.com/1300x600/f0ebf0/fff.jpg&text=Dummy+Image"
-        alt="LandingCrop"
-      />
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            <div class="info text-center">
+              <h3>Infrastructure enables innovation</h3>
+              <p>
+                Consistent workflows to provision, secure, connect, and run any
+                infrastructure for any application.
+              </p>
+              <div class="search_wrapper">
+                <input type="text" placeholder="Work With Email Address" />
+                <button>Request a Demo</button>
+              </div>
+              <a class="sales_team_link" href="#"
+                >Speak with our technical sales team
+                <svg
+                  class="bi bi-arrow-right"
+                  width="1em"
+                  height="1em"
+                  viewBox="0 0 16 16"
+                  fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                    clip-rule="evenodd"
+                  />
+                  <path
+                    fill-rule="evenodd"
+                    d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- End of Slider Section -->
 
