Add News Section

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -128,6 +128,36 @@
     </section>
     <!-- End of Slider Section -->
 
+    <!-- Start News Section -->
+    <section class="news_section">
+      <div class="container">
+        <div class="news_section_container">
+          <div class="single_news transtion">
+            <span class="eye_braw">june 22-24</span>
+            <h3>
+              Join us for Hashiconf Digital, an online community event
+            </h3>
+            <p>Register for free</p>
+          </div>
+          <div class="single_news transtion">
+            <span class="eye_braw">announcement</span>
+            <h3>
+              HashiCorp Consul Service on Azure Public Beta Available Now
+            </h3>
+            <p>Learn More</p>
+          </div>
+          <div class="single_news transtion">
+            <span class="eye_braw">Available now</span>
+            <h3>
+              Virtual Office Hours with HashiCorp Solution Engineers
+            </h3>
+            <p>Book a Time Today!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of News Section -->
+
     <script>
       window.jQuery ||
         document.write(
