Add Trusted Logo

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -158,6 +158,33 @@
     </section>
     <!-- End of News Section -->
 
+    <!-- Start of Trusted Section -->
+    <section class="trusted_logo">
+      <div class="container">
+        <div class="logo_list">
+          <div class="single_logo">
+            <img src="./images/adobe-black.svg" alt="" />
+          </div>
+          <div class="single_logo">
+            <img src="./images/barclays-black.svg" alt="" />
+          </div>
+          <div class="single_logo">
+            <img src="./images/hulu-black.svg" alt="" />
+          </div>
+          <div class="single_logo">
+            <img src="./images/pandora-black.svg" alt="" />
+          </div>
+          <div class="single_logo">
+            <img src="./images/progressive-black.svg" alt="" />
+          </div>
+          <div class="single_logo">
+            <img src="./images/sap-ariba-black.svg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Trusted Section -->
+
     <script>
       window.jQuery ||
         document.write(
