Add Trusted Logo assets
Modified to remove real logos in order to minimize exposure to improper
use of trademarks.

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -158,6 +158,33 @@
     </section>
     <!-- End of News Section -->
 
+    <!-- Start of Trusted Section -->
+    <section class="trusted_logo">
+      <div class="container">
+        <div class="logo_list">
+          <div class="single_logo">
+            <img src="./images/logo-triangle.svg" alt="" />
+          </div>
+          <div class="single_logo">
+            <img src="./images/logo-circleco.svg" alt="" />
+          </div>
+          <div class="single_logo">
+            <img src="./images/logo-hooli.svg" alt="" />
+          </div>
+          <div class="single_logo">
+            <img src="./images/logo-solarnets.svg" alt="" />
+          </div>
+          <div class="single_logo">
+            <img src="./images/logo-innov8tor.svg" alt="" />
+          </div>
+          <div class="single_logo">
+            <img src="./images/logo-acmeindustries.svg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Trusted Section -->
+
     <script>
       window.jQuery ||
         document.write(
